Sat Nov 27 21:43:39 2004  Tanaka Akira  <akr@m17n.org>

	* io.c: avoid data lost with nonblocking fd and
	  stdio buffering in sync mode.  [ruby-dev:24966]
	  based on matz's patch [ruby-dev:24967]
	  (io_fwrite): new primitive writing function which writes
	  directly if sync mode.
	  (rb_io_fwrite): wrapper for io_fwrite now.
	  (io_write): call io_fwrite instead of rb_io_fwrite.

Sat Nov 27 17:43:21 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/{0.9,1.0,2.0,trackback,xml-stylesheet}.rb: added
	  #setup_maker.
	
	* test/rss/test_setup_maker_*.rb: added tests for #setup_maker.

	* lib/rss/maker/base.rb(RSS::Maker::Items#max_size=): supported
	  output item size limitation.
	
	* sample/rss/blend.rb: added sample for RSS Maker.

Sat Nov 27 17:41:35 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/0.9.rb: supported RSS::Maker.make("0.91"). Now,
	  "0.9" is just alias of "0.91."

	* test/rss/test_maker_0.9.rb: make("0.9") -> maker("0.91").

	* test/rss/test_to_s.rb: ditto.

Sat Nov 27 17:21:30 2004  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/list_description.rb: untabified.
	
	* sample/rss/rss_recent.rb: ditto.

Sat Nov 27 09:41:21 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_fread): old rb_io_fread with file closing checking.
	  (rb_io_fread): wrapper for io_fread now.
	  [ruby-dev:24964]

Fri Nov 26 18:02:44 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: Tk.destroy uses TkWindow#epath

	* ext/tk/lib/tk/image.rb: bug fix

	* ext/tk/lib/tk/wm.rb: add 'iconphoto' method(Windows only)

	* ext/tk/lib/tkextlib/*: some methods uses TkWindow#epath

Fri Nov 26 14:29:39 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_initialize): uninitialized fd was checked to see open
	  mode.  [ruby-dev:24963]

	* io.c (rb_io_initialize): uninitialized fd was used.  [ruby-dev:24962]

Fri Nov 26 13:49:06 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_initialize): should retrieve flags from copying file